--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,64 @@
     <title>Hotshots {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+      <div class="row">
+        <div class="col-12 col-lg4 my-auto py-1 py-lg-0 text-center text-lg-left">
+          <a href="{% url for 'home' %}" class="nav-link main-logo-link">
+            <h2 class="logo-font text-black my-0">H<i class="fas fa-dot-circle"></i>tsh<i class="fas fa-dot-circle"></i>ts</h2></a>
+        </div>
+        <div class="col-12 col-lg4 my-auto py-1 py-lg-0">
+          <form action="" method="get">
+            <div class="input-group w-100">
+              <input type="text" class="form-control border border-black-rounded" name="q" placeholder="Search the site">
+              <div class="input-group-append">
+                <button class="form-control btn btn-red border border-red rounded" type="submit"></button>
+                  <span class="icon">
+                    <i class="fas fa-search"></i>
+                  </span>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-12 col-lg4 my-auto py-1 py-lg-0">
+          <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            <li class="list-inline-item dropdown"></li>
+              <a href="#" class="text-black nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="text-center">
+                  <div><i class="fas fa-user fa-lg"></i></div>
+                  <p class="my-0">My Account</p>
+                </div>
+              </a>
+              <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                {%if request.user.is_authticated %}
+                  {% if request.user.is_superuser %}
+                    <a href="#" class="dropdown-item">Manage Products</a>
+                  {% endif %}
+                  <a href="" class="dropdown-item">My Profile</a>
+                  <a href="{% url'account_logout' %}" class="dropdown-item">Sign Out</a>
+                {% else %}
+                <a href="{% url'account_signup' %}" class="dropdown-item">Create Account</a>
+                <a href="{% url'account_login' %}" class="dropdown-item">Sign In</a>
+                {% endif %}
 
+              </div>
+            <li class="list-inline-item"></li>
+              <a href="" class="{% if grand_total %}text-info font-weight-bolder {% else %} text-black {% endif %} nav-link">
+                <div class="text-center">
+                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                  <p class="my-0">
+                    {% if grand_total %}
+                      £{{grand_total|floatformat:2}}
+                    {% else %}
+                      £0.00
+                    {% endif %}
+                  </p>
+                </div>
+              </a>
+          </ul>
+        </div>
+      </div>
+    </header>
     {% if messages %}
     <div class="message-container"></div>
     {% endif %}
