--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,13 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
-        <div class="col-7 offset-2 col-md-6 offset-md-3 my-auto">
-            <h1 class="display-4 logo-font text-black">
+        <div class="col-7 offset-2 col-md-5 text-lg-center my-auto">
+            <h1 class="display-4 logo-font text-rose underlay">
+                Check out the latest gear
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-btn btn btn-lg rounded text-uppercase py-3">Shop Now</a>                
+                    <a href="" class="shop-now-btn btn btn-lg rounded-0 text-uppercase text-lg-center py-3"><strong>Shop Now</strong></a>                
                 </h4>
             </div>
         </div>
