--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,21 @@
     {% endblock %}
 
     {% block corecss %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    {% endblock %}
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&effect=fire-animation&family=Pontano+Sans&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+      <link rel="stylesheet" href="{% static 'css/base.css' %}">
+      {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -31,28 +38,29 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <div class="row">
-        <div class="col-12 col-lg4 my-auto py-1 py-lg-0 text-center text-lg-left">
-          <a href="{% url for 'home' %}" class="nav-link main-logo-link">
-            <h2 class="logo-font text-black my-0">H<i class="fas fa-dot-circle"></i>tsh<i class="fas fa-dot-circle"></i>ts</h2></a>
+      <div id="topnav" class="row bg-darkred pt-lg-2 d-none d-lg-flex">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+          <a href="{% url 'home' %}" class="nav-link main-logo-link">
+            <h2 class="text-rose my-0">H<i class="fas fa-dot-circle text-red"></i>tsh<i class="fas fa-dot-circle text-red"></i>ts</h2></a>
         </div>
-        <div class="col-12 col-lg4 my-auto py-1 py-lg-0">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <form action="" method="get">
             <div class="input-group w-100">
-              <input type="text" class="form-control border border-black-rounded" name="q" placeholder="Search the site">
+              <input type="text" class="form-control border border-black bg-rose text-red rounded-0" name="q" placeholder="Search Hotshots">
               <div class="input-group-append">
-                <button class="form-control btn btn-red border border-red rounded" type="submit"></button>
+                <button class="form-control btn btn-rose border border-black rounded" type="submit">
                   <span class="icon">
                     <i class="fas fa-search"></i>
                   </span>
+                </button>
               </div>
             </div>
           </form>
         </div>
-        <div class="col-12 col-lg4 my-auto py-1 py-lg-0">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
             <li class="list-inline-item dropdown"></li>
-              <a href="#" class="text-black nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="#" class="text-rose nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
                   <div><i class="fas fa-user fa-lg"></i></div>
                   <p class="my-0">My Account</p>
@@ -64,15 +72,15 @@
                     <a href="#" class="dropdown-item">Manage Products</a>
                   {% endif %}
                   <a href="" class="dropdown-item">My Profile</a>
-                  <a href="{% url'account_logout' %}" class="dropdown-item">Sign Out</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
                 {% else %}
-                <a href="{% url'account_signup' %}" class="dropdown-item">Create Account</a>
-                <a href="{% url'account_login' %}" class="dropdown-item">Sign In</a>
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Create Account</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a>
                 {% endif %}
 
               </div>
             <li class="list-inline-item"></li>
-              <a href="" class="{% if grand_total %}text-info font-weight-bolder {% else %} text-black {% endif %} nav-link">
+              <a href="#" class="{% if grand_total %} text-info font-weight-bold {% else %} text-rose {% endif %} nav-link">
                 <div class="text-center">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                   <p class="my-0">
