corrected typing errors in header and fixed bug

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,5 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="avbar w-auto mx-auto">
+    <ul class="navbar w-auto mx-auto">
         <li class="nav-item dropdown">
             <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
                 All Products
