--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
     {% block extra_meta %}
@@ -41,7 +41,8 @@
       <div id="topnav" class="row bg-darkred pt-lg-2 d-none d-lg-flex">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="text-rose my-0">H<i class="fas fa-dot-circle text-red"></i>tsh<i class="fas fa-dot-circle text-red"></i>ts</h2></a>
+            <h2 class="text-rose my-0">H<i class="fas fa-dot-circle text-red"></i>tsh<i class="fas fa-dot-circle text-red"></i>ts</h2>
+          </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <form action="" method="GET">
@@ -59,7 +60,7 @@
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            <li class="list-inline-item dropdown"></li>
+            <li class="list-inline-item dropdown">
               <a href="#" class="text-rose nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
                   <div><i class="fas fa-user fa-lg"></i></div>
@@ -77,9 +78,9 @@
                 <a href="{% url 'account_signup' %}" class="dropdown-item">Create Account</a>
                 <a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a>
                 {% endif %}
-
               </div>
-            <li class="list-inline-item"></li>
+            </li>
+            <li class="list-inline-item">
               <a href="#" class="{% if grand_total %} text-info font-weight-bold {% else %} text-rose {% endif %} nav-link">
                 <div class="text-center">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
@@ -92,6 +93,7 @@
                   </p>
                 </div>
               </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -100,8 +102,8 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          {% include 'includes/mobile-header.html' %}
           {% include 'includes/main-nav.html' %}
+          {% include 'includes/mobile-header.html' %}
         </nav>
       </div>
     </header>
