fixed bug preventing Bootstrap elements to work

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,6 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar w-auto mx-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown list-unstyled">
             <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
                 All Products
             </a>
@@ -11,7 +11,7 @@
                 <a href="#" class="dropdown-item">By Rating</a>
             </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown list-unstyled">
             <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
                 Bowls
             </a>
@@ -23,7 +23,7 @@
                 
             </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown list-unstyled">
             <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
                 Clothing
             </a>
@@ -34,7 +34,7 @@
                 <a href="#" class="dropdown-item">Shorts, Skirts &amp; Trousers</a>
             </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown list-unstyled">
             <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
                 Accessories
             </a>
