Changed CSS on navigation bars to fix colour clash

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 offset-2 col-md-5 text-lg-center my-auto">
-            <h1 class="display-4 logo-font text-rose underlay">
+            <h1 class="display-4 logo-font text-rose shadow">
                 Check out the latest gear
             </h1>
             <div class="my-5">
