--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -1,8 +1,7 @@
-<ul>  
     <li class="list-inline-item">
         <a href="#" class="text-rose nav-link d-block d-lg-none" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
-                <div><i class="fas fa-search fa-lg"></i></div>
+                <div><i class="fas fa-search"></i></div>
                 <p class="my-0">Search</p>
             </div>
         </a>
@@ -24,27 +23,27 @@
     <li class="list-inline-item dropdown">
         <a href="#" class="text-red nav-link d-block d-lg-none" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
-                <div><i class="fas fa-user fa-lg"></i></div>
+                <div><i class="fas fa-user"></i></div>
                 <p class="my-0">My Account</p>
             </div>
         </a>
         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                 {%if request.user.is_authticated %}
                     {% if request.user.is_superuser %}
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Manage Products</a>
+                    <a href="{% url 'account_logout' %}" class="dropdown-item text-red">Manage Products</a>
                     {% endif %}
                     <a href="" class="dropdown-item">My Profile</a>
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
+                    <a href="{% url 'account_logout' %}" class="dropdown-item text-red">Sign Out</a>
                 {% else %}
-                <a href="{% url 'account_signup' %}" class="dropdown-item">Create Account</a>
-                <a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a>
+                <a href="{% url 'account_signup' %}" class="dropdown-item text-red">Create Account</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item text-red">Sign In</a>
                 {% endif %}
         </div>
     </li>
     <li class="list-inline-item">
         <a href="#" class="{% if grand_total %} text-rose font-weight-bold {% else %} text-rose {% endif %} nav-link d-block d-lg-none">
             <div class="text-center">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <div><i class="fas fa-shopping-bag"></i></div>
                 <p class="my-0">
                 {% if grand_total %}
                     £{{grand_total|floatformat:2}}
@@ -55,4 +54,3 @@
             </div>
         </a>
     </li>
-</ul>
