--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,48 +1,48 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar w-auto mx-auto">
+    <ul class="navbar w-auto mx-auto my-0">
         <li class="nav-item dropdown list-unstyled">
-            <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
+            <a href="#" class="bg-darkred font-weight-bold nav-link text-rose text-uppercase mr-5" id="all-products-link" data-toggle="dropdown">
                 All Products
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">All Products</a>
-                <a href="#" class="dropdown-item">By Category</a>
-                <a href="#" class="dropdown-item">By Price</a>
-                <a href="#" class="dropdown-item">By Rating</a>
+            <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
+                <a href="#" class="dropdown-item text-red">All Products</a>
+                <a href="#" class="dropdown-item text-red">By Category</a>
+                <a href="#" class="dropdown-item text-red">By Price</a>
+                <a href="#" class="dropdown-item text-red">By Rating</a>
             </div>
         </li>
         <li class="nav-item dropdown list-unstyled">
-            <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
+            <a href="#" class="bg-darkred font-weight-bold nav-link text-rose text-uppercase mr-5" id="all-products-link" data-toggle="dropdown">
                 Bowls
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">All Bowls</a>
-                <a href="#" class="dropdown-item">By Brand</a>
-                <a href="#" class="dropdown-item">By Price</a>
-                <a href="#" class="dropdown-item">By Rating</a>
+            <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
+                <a href="#" class="dropdown-item text-red">All Bowls</a>
+                <a href="#" class="dropdown-item text-red">By Brand</a>
+                <a href="#" class="dropdown-item text-red">By Price</a>
+                <a href="#" class="dropdown-item text-red">By Rating</a>
                 
             </div>
         </li>
         <li class="nav-item dropdown list-unstyled">
-            <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
+            <a href="#" class="bg-darkred font-weight-bold nav-link text-rose text-uppercase mr-5" id="all-products-link" data-toggle="dropdown">
                 Clothing
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">All Clothing</a>
-                <a href="#" class="dropdown-item">Footwear</a>
-                <a href="#" class="dropdown-item">Tops &amp; Jackets</a>
-                <a href="#" class="dropdown-item">Shorts, Skirts &amp; Trousers</a>
+            <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
+                <a href="#" class="dropdown-item text-red">All Clothing</a>
+                <a href="#" class="dropdown-item text-red">Footwear</a>
+                <a href="#" class="dropdown-item text-red">Tops &amp; Jackets</a>
+                <a href="#" class="dropdown-item text-red">Shorts, Skirts &amp; Trousers</a>
             </div>
         </li>
         <li class="nav-item dropdown list-unstyled">
-            <a href="#" class="logo-font font-weight-bold nav-link text-rose mr-5" id="all-products-link" data-toggle="dropdown">
+            <a href="#" class="bg-darkred font-weight-bold nav-link text-rose text-uppercase mr-5" id="all-products-link" data-toggle="dropdown">
                 Accessories
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">All Accessories</a>
-                <a href="#" class="dropdown-item">Awards &amp; Trophies</a>
-                <a href="#" class="dropdown-item">Marking Essentials</a>
-                <a href="#" class="dropdown-item">Clubhouse Essentials</a>
+            <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
+                <a href="#" class="dropdown-item text-red">All Accessories</a>
+                <a href="#" class="dropdown-item text-red">Awards &amp; Trophies</a>
+                <a href="#" class="dropdown-item text-red">Marking Essentials</a>
+                <a href="#" class="dropdown-item text-red">Clubhouse Essentials</a>
             </div>
         </li>
     </ul>
