--- a/templates/base.html
+++ b/templates/base.html
@@ -2,128 +2,150 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
-    
-    {% block meta %}
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% endblock %}
 
-    {% block extra_meta %}
-    {% endblock %}
+<head>
 
-    {% block corecss %}
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&effect=fire-animation&family=Pontano+Sans&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-      <link rel="stylesheet" href="{% static 'css/base.css' %}">
-      {% endblock %}
+  {% block meta %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% endblock %}
 
-    {% block extra_css %}
-    {% endblock %}
+  {% block extra_meta %}
+  {% endblock %}
 
-    {% block corejs %}
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    {% endblock %}
+  {% block corecss %}
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&effect=fire-animation&family=Pontano+Sans&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
+  {% block extra_css %}
+  {% endblock %}
 
-    <title>Hotshots {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
-    <header class="container-fluid fixed-top">
-      <div id="topnav" class="row bg-darkred pt-lg-2 d-none d-lg-flex">
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-          <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="text-rose my-0">H<i class="fas fa-dot-circle text-red"></i>tsh<i class="fas fa-dot-circle text-red"></i>ts</h2>
-          </a>
-        </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-          <form action="" method="GET">
-            <div class="input-group w-100">
-              <input type="text" class="form-control border border-black bg-rose text-red rounded-0" name="q" placeholder="Search Hotshots">
-              <div class="input-group-append">
-                <button class="form-control btn btn-rose border border-black rounded" type="submit">
-                  <span class="icon">
-                    <i class="fas fa-search"></i>
-                  </span>
-                </button>
-              </div>
+  {% block corejs %}
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  {% endblock %}
+
+  {% block extra_js %}
+  {% endblock %}
+
+  <title>Hotshots {% block extra_title %}{% endblock %}</title>
+</head>
+
+<body>
+  <header class="container-fluid fixed-top">
+    <div id="topnav" class="row bg-darkred pt-lg-2 d-none d-lg-flex">
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
+        <a href="{% url 'home' %}" class="nav-link main-logo-link">
+          <h2 class="text-rose my-0">H<i class="fas fa-dot-circle text-red"></i>tsh<i
+              class="fas fa-dot-circle text-red"></i>ts</h2>
+        </a>
+      </div>
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <form action="" method="GET">
+          <div class="input-group w-100">
+            <input type="text" class="form-control border border-black bg-rose text-red rounded-0" name="q"
+              placeholder="Search Hotshots">
+            <div class="input-group-append">
+              <button class="form-control btn btn-rose border border-black rounded" type="submit">
+                <span class="icon">
+                  <i class="fas fa-search"></i>
+                </span>
+              </button>
             </div>
-          </form>
-        </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-          <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            <li class="list-inline-item dropdown">
-              <a href="#" class="text-rose nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div class="text-center">
-                  <div><i class="fas fa-user fa-lg"></i></div>
-                  <p class="my-0 text-uppercase">My Account</p>
-                </div>
-              </a>
-              <div class="dropdown-menu border-0 bg-rose" aria-labelledby="user-options">
-                {%if request.user.is_authticated %}
-                  {% if request.user.is_superuser %}
-                    <a href="#" class="dropdown-item text-red">Manage Products</a>
-                  {% endif %}
-                  <a href="" class="dropdown-item text-red">My Profile</a>
-                  <a href="{% url 'account_logout' %}" class="dropdown-item text-red">Sign Out</a>
-                {% else %}
-                <a href="{% url 'account_signup' %}" class="dropdown-item text-red">Create Account</a>
-                <a href="{% url 'account_login' %}" class="dropdown-item text-red">Sign In</a>
-                {% endif %}
+          </div>
+        </form>
+      </div>
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+          <li class="list-inline-item dropdown">
+            <a href="#" class="text-rose nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              <div class="text-center">
+                <div><i class="fas fa-user fa-lg"></i></div>
+                <p class="my-0 text-uppercase">My Account</p>
               </div>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="{% if grand_total %} text-rose font-weight-bold {% else %} text-rose {% endif %} nav-link">
-                <div class="text-center">
-                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                  <p class="my-0">
-                    {% if grand_total %}
-                      £{{grand_total|floatformat:2}}
-                    {% else %}
-                      £0.00
-                    {% endif %}
-                  </p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
+            </a>
+            <div class="dropdown-menu border-0 bg-rose" aria-labelledby="user-options">
+              {%if request.user.is_authticated %}
+              {% if request.user.is_superuser %}
+              <a href="#" class="dropdown-item text-red font-weight-bold">Manage Products</a>
+              {% endif %}
+              <a href="" class="dropdown-item text-red font-weight-bold">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item text-red font-weight-bold">Sign Out</a>
+              {% else %}
+              <a href="{% url 'account_signup' %}" class="dropdown-item text-red font-weight-bold">Create Account</a>
+              <a href="{% url 'account_login' %}" class="dropdown-item text-red font-weight-bold">Sign In</a>
+              {% endif %}
+            </div>
+          </li>
+          <li class="list-inline-item">
+            <a href="#"
+              class="{% if grand_total %} text-rose font-weight-bold {% else %} text-rose {% endif %} nav-link">
+              <div class="text-center">
+                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <p class="my-0">
+                  {% if grand_total %}
+                  £{{grand_total|floatformat:2}}
+                  {% else %}
+                  £0.00
+                  {% endif %}
+                </p>
+              </div>
+            </a>
+          </li>
+        </ul>
       </div>
-      <div class="row bg-rose">
-        <nav class="navbar navbar-expand-lg navbar-light w-100">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon bg-red"></span>
-          </button>
-          {% include 'includes/mobile-header.html' %}
-          {% include 'includes/main-nav.html' %}
-        </nav>
-      </div>
-      <div id="delivery-banner" class="row text-center">
-        <div class="col bg-darkred text-rose text-capitalize ">
-          <h4 class="my-1">Free Delivery on orders worth £{{ free_shipping_threshold }}!</h4>
-        </div>
     </div>
-    </header>
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %}
+    <div class="row bg-rose">
+      <div class="col bg-darkred">
+        {% include 'includes/mobile-top-header.html' %}
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light w-100">
+        <button class="navbar-toggler border-black" type="button" data-toggle="collapse" data-target="#main-nav"
+          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="text-darkred"><i class="fas fa-bars"></i></span>
+        </button>
+        {% include 'includes/mobile-header.html' %}
+        {% include 'includes/main-nav.html' %}
+      </nav>
+      <!--class="navbar-toggler-icon"-->
+    </div>
+    <div id="delivery-banner" class="row text-center">
+      <div class="col bg-darkred text-rose text-capitalize ">
+        <h4 class="my-1">Free Delivery on orders worth £{{ free_shipping_threshold }}!</h4>
+      </div>
+    </div>
+  </header>
+  {% if messages %}
+  <div class="message-container"></div>
+  {% endif %}
 
-    {% block page_header %}
-    {% endblock %}
-    
-    {% block content %}
-    {% endblock %}
+  {% block page_header %}
+  {% endblock %}
 
-    {% block postloadjs %}
-    {% endblock %}
-    
-  </body>
+  {% block content %}
+  {% endblock %}
+
+  {% block postloadjs %}
+  {% endblock %}
+
+</body>
+
 </html>
