--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         </a>
       </div>
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <form action="" method="GET">
+        <form action="{% url 'products' %}" method="GET">
           <div class="input-group w-100">
             <input type="text" class="form-control border border-black bg-rose text-red rounded-0" name="q"
               placeholder="Search Hotshots">
