--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -6,7 +6,7 @@
             </div>
         </a>
         <div class="dropdown-menu bg-darkred border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-            <form class="form" action="" method="GET">
+            <form class="form" action="{% url 'products' %}" method="GET">
                 <div class="input-group w-100">
                     <input type="text" class="form-control border border-black bg-rose text-red rounded-0" name="q" placeholder="Search Hotshots">
                     <div class="input-group-append">
