Added sorting funtionality

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,9 +6,9 @@
             </a>
             <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}" class="dropdown-item text-red font-weight-bold">All Products</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">By Category</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">By Price</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item text-red font-weight-bold">By Category</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item text-red font-weight-bold">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item text-red font-weight-bold">By Rating</a>
             </div>
         </li>
         <li class="nav-item dropdown list-unstyled">
@@ -16,10 +16,10 @@
                 Bowls
             </a>
             <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item text-red font-weight-bold">All Bowls</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">By Brand</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">By Price</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">By Rating</a>
+                <a href="{% url 'products' %}?category=bowls" class="dropdown-item text-red font-weight-bold">All Bowls</a>
+                <a href="{% url 'products' %}?category=bowls&direction=asc" class="dropdown-item text-red font-weight-bold">By Brand</a>
+                <a href="{% url 'products' %}?category=bowls&sort=price&direction=asc" class="dropdown-item text-red font-weight-bold">By Price</a>
+                <a href="{% url 'products' %}?category=bowls&sort=rating&direction=desc" class="dropdown-item text-red font-weight-bold">By Rating</a>
                 
             </div>
         </li>
@@ -28,10 +28,10 @@
                 Clothing
             </a>
             <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item text-red font-weight-bold">All Clothing</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">Footwear</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">Tops &amp; Jackets</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">Shorts, Skirts &amp; Trousers</a>
+                <a href="{% url 'products' %}?category=upperbodywear, footwear, lowerbodywear" class="dropdown-item text-red font-weight-bold">All Clothing</a>
+                <a href="{% url 'products' %}?category=footwear" class="dropdown-item text-red font-weight-bold">Footwear</a>
+                <a href="{% url 'products' %}?category=upperbodywear" class="dropdown-item text-red font-weight-bold">Tops &amp; Jackets</a>
+                <a href="{% url 'products' %}?category=lowerbodywear" class="dropdown-item text-red font-weight-bold">Shorts, Skirts &amp; Trousers</a>
             </div>
         </li>
         <li class="nav-item dropdown list-unstyled">
@@ -39,10 +39,10 @@
                 Accessories
             </a>
             <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item text-red font-weight-bold">All Accessories</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">Personal Accessories</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">Marking Essentials</a>
-                <a href="#" class="dropdown-item text-red font-weight-bold">Club Equipment</a>
+                <a href="{% url 'products' %}?category=personal,marking,clubequipment" class="dropdown-item text-red font-weight-bold">All Accessories</a>
+                <a href="{% url 'products' %}?category=personal" class="dropdown-item text-red font-weight-bold">Personal Accessories</a>
+                <a href="{% url 'products' %}?category=marking" class="dropdown-item text-red font-weight-bold">Marking Essentials</a>
+                <a href="{% url 'products' %}?category=clubequipment" class="dropdown-item text-red font-weight-bold">Club Equipment</a>
             </div>
         </li>
     </ul>
