--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -32,12 +32,19 @@
                     <p class="mb-0 text-center text-rose text-uppercase font-weight-bold">{{ product.name }}</p>
                         <div class="text-darkred font-weight-bold bg-rose">
                         <p class="lead mb-0 font-weight-bold">£{{ product.price }}</p>
+                        {% if product.category %}
+                            <p class="small mt-1 mb-0">
+                                <a href="{% url'products' %}?category={{ product.category.name }}" class="text-muted text-red text-capitalize font-weight-bold">
+                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                </a>
+                            </p>
+                        {% endif  %}
                         <p class="mt-2">{{ product.description }}</p>
                         {% if product.rating %}
                             <small class="text-muted text-rose"><i class="fas fa-star mr-1"></i>{{ product.rating }}</small>
                         {% else %}
                             <small class="text-muted text-rose">No Rating</small>
-                        {%endif  %}
+                        {% endif  %}
                         </div>
                 </div>
             </div>
