--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -16,12 +16,41 @@
         <div class="row">
             <div class="col text-center mt-2 text-black">
                 <h2 class="logo-font font-weight-bold">Products</h2>
+                {% for c in current_categories %}
+                    <a href="{% url 'products' %}?category={{ c.name }}" class="category-badge">
+                        <span class="p-2 mt-2 mb-1 badge badge-white text-red rounded-0 border border-dark text-uppercase">{{ c.friendly_name }}</span>
+                    </a>
+                    {% endfor %}
                 <hr class="w-50 mb-3 mt-0">
             </div>
         </div>
         <div class="row bg-red">
             <div class="product-container col-10 offset-1">
-               <div class="row mt-1 mb-3"></div>
+               <div class="row mt-1 mb-3">
+                   <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <div class="sort-select-wrapper w-50">
+                            <select id="sort-selector" class="custom-select custom-select-sm bg-rose text-darkred rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort By...</option>
+                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}> Price (low to high)</option>
+                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                                <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                                <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A to Z)</option>
+                                <option value="name_desc" {% if current_sorting == 'name_desce' %}selected{% endif %}>Name (Z to A)</option>
+                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A to Z)</option>
+                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z to A)</option>
+                            </select>    
+                        </div>
+                   </div>
+                   <div class="col-12 col-md-6 order md first">
+                       <p class="text-muted text-rose text-uppercase font-weight-bold mt-3 text-center text md-left">
+                           {% if search_term or current_categories or current_sorting != 'None_None' %}
+                            <span class="small text-darkred font-weight-bold bg-rose text-uppercase mr-2"><a href="{% url 'products' %}" class="text-darkred">Products Home</a> |  </span>
+                            {% endif %}
+                            {{ products|length }} Products shown{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                       </p>
+                   </div>
+               </div>
                <div class="row">
                    {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -42,11 +71,18 @@
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 font-weight-bold">£{{ product.price }}</p>
+                                            {% if product.category %}
+                                                <p class="small mt-1 mb-0">
+                                                    <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted text-red text-capitalize">
+                                                        <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                                    </a>
+                                                </p>
+                                            {% endif  %}
                                             {% if product.rating %}
                                                 <small class="text-muted text-red"><i class="fas fa-star mr-1"></i>{{ product.rating }}</small>
                                             {% else %}
                                                 <small class="text-muted text-red">No Rating</small>
-                                            {%endif  %}
+                                            {% endif  %}
                                         </div>
                                     </div>
                                 </div>
