Added shopping bag app, urls and template

--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -41,7 +41,7 @@
         </div>
     </li>
     <li class="list-inline-item">
-        <a href="#" class="{% if grand_total %} text-darkred font-weight-bold {% else %} text-darkred {% endif %} nav-link d-block d-lg-none">
+        <a href="{% url 'view_bag' %}" class="{% if grand_total %} text-darkred font-weight-bold {% else %} text-darkred {% endif %} nav-link d-block d-lg-none">
             <div class="text-center">
                 <div><i class="fas fa-shopping-bag"></i></div>
                 <p class="my-0">
