--- a/templates/base.html
+++ b/templates/base.html
@@ -96,8 +96,7 @@
             </div>
           </li>
           <li class="list-inline-item">
-            <a href="#"
-              class="{% if grand_total %} text-rose font-weight-bold {% else %} text-rose {% endif %} nav-link">
+            <a href="{% url 'view_bag' %}" class="{% if grand_total %} text-rose font-weight-bold {% else %} text-rose {% endif %} nav-link">
               <div class="text-center">
                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                 <p class="my-0">
