--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col text-uppercase text-center text-darkred mb-2">
                     <hr>
-                    <h2>Shopping Bag <i class="fas fa-shopping-bag ml-2"></i></h2>
+                    <h2>Shopping Basket <i class="fas fa-shopping-basket ml-2"></i></h2>
                 </div>
             </div>
 
@@ -26,7 +26,7 @@
                     {% if bag_items %}
                         <div class="table-responsive rounded"></div>
                     {% else %}
-                        <p class="lead mb-5 text-capitalize"><i class="far fa-frown fa-lg"></i> - You haven't added any items yet!</p>
+                        <p class="lead mb-5 text-capitalize"><i class="far fa-frown fa-lg"></i> - You haven't added any items to your basket yet!</p>
                         <a href="{% url 'products'%}" class="btn btn-outline-black btn-red rounded-0 btn-lg mb-3">
                             <span class="icon">
                                 <i class="fas fa-hand-point-left"></i>
